# vuhlp-code

./: .env.example  .gitignore  .gitmodules  AGENTS.md  AGENT_PROMPT.md  CLAUDE.md  LICENSE  Makefile  README.md  eslint.config.js  go.mod  go.sum  go.work.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
.harness/: config.example.json
cmd/: __init__.py
docker/: Dockerfile.agentd
docs/: 00-shared-contract.md  01-product-spec.md  01-quickstart.md  02-concepts.md  02-prompts-and-templates.md  03-agent-parameters-and-permissions.md  03-architecture.md  04-communication-and-context.md  04-orchestration-loop.md  04-orchestration-patterns.md  05-graph-rules-and-scheduling.md  05-provider-adapters.md  06-auth.md  06-orchestration-modes-and-loop-safety.md  07-ui-spec.md  07-workspaces.md  08-stack.md  08-verification.md  09-cli-patches.md  09-ui-graph.md  10-config.md  11-roadmap.md  12-api.md  13-security.md  14-decisions.md  15-agents-sdk-integration.md  16-custom-interface-mode.md  17-agent-workflow-ui-framework.md  18-execution-semantics.md  19-join-gates-and-routing.md  20-loop-safety-and-nonprogress.md  21-context-packs.md  22-docs-lifecycle.md  23-failure-modes-and-recovery.md  24-cli-equivalence.md  README.md  ai-kit-integration.md  architecture.md  custom-interface-mode.md  http-api.md  (+6 more)
sandbox/: example.txt
scripts/: dev-dashboard.sh  dev-vpn.mjs  render-awsdac.sh  render-mermaid.sh
test/: api.test.ts  plan.test.ts  runstore.test.ts  test_api.py  test_plan.py  test_runstore.py  test_symbols.py
(+207 files in other folders)
