[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness"
version = "0.1.0"
description = "Local-first coding agent harness"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "ai-kit @ file:../ai-kit/packages/python",
  "ai-kit-inference @ file:../ai-kit/packages/python-inference",
]

[project.scripts]
agentd = "cmd.agentd.main:main"
agentctl = "cmd.agentctl.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cmd*", "internal*"]
